# Android

app/: CMakeCache.txt  Makefile  build.gradle  cmake_install.cmake
app/src/main/: AndroidManifest.xml  CMakeCache.txt
app/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  native-lib.cpp  serial.cpp  serial_protocol.c
app/src/main/cpp/include/: dashboard0_events.h  greio.h  serial.h  serial_protocol.h
app/src/main/java/com/example/test3/: MainActivity.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
